# BEEMIC

./: LICENSE  README.md
code/add_characteristics/: add_characteristic.py
code/preprocess_and_plot/: CompareGraphs.asv  CompareGraphs.m  Happy.csv  HappyData.mat  HappyScript.m  Lost.csv  LostData.mat  LostScript.m  Sneak.csv  Sneak.txt  SneakData.mat  SneakScript.m
code/preprocess_and_plot/plotting/: Happy.txt  Lost.txt  Original.txt
code/velocity_control/: CMakeLists.txt  beemic_vel.cpp
code/velocity_control/data/: Happy.txt  Lost.txt  Sneak.txt
